--- a/style.css
+++ b/style.css
@@ -401,3 +401,10 @@ p{
     border: 1px solid #08817969;
     border-radius: 7px;
 }
+::-webkit-scrollbar{
+    background-color: transparent;
+    width: 7px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #8EC5FC;background-image:linear-gradient(45deg,#8EC5FC,#E0C3FC);
+}
